--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -20,12 +21,15 @@
     "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.439.0",
     "next": "15.0.0-canary.85",
+    "prisma": "^5.19.1",
     "react": "19.0.0-rc.0",
     "react-dom": "19.0.0-rc.0",
     "react-youtube": "^10.1.0",
+    "resend": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
