--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
@@ -12,6 +12,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.675.0",
+    "@headlessui/react": "^2.2.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -21,14 +24,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
+    "html-pdf": "^3.0.1",
+    "jotai": "^2.10.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.439.0",
-    "next": "15.0.0-canary.85",
+    "next": "^15.0.3",
+    "pdf-lib": "^1.17.1",
     "prisma": "^5.19.1",
-    "react": "19.0.0-rc.0",
-    "react-dom": "19.0.0-rc.0",
+    "punycode": "^2.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-youtube": "^10.1.0",
     "resend": "^4.0.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -46,11 +54,13 @@
     "@storybook/react": "^8.2.6",
     "@storybook/test": "^8.2.6",
     "@types/bcrypt": "^5.0.2",
+    "@types/html-pdf": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/next": "^9.0.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.8",
+    "@types/pdfkit": "^0.13.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "ajv": "^7.2.4",
@@ -63,7 +73,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.6",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^7.17.0"
   }
 }
