--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@react-pdf/renderer": "^4.1.5",
     "@tiptap/extension-link": "^2.10.3",
     "@tiptap/extension-text-align": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
@@ -38,9 +39,11 @@
     "isomorphic-dompurify": "^2.19.0",
     "jotai": "^2.10.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.439.0",
     "next": "^15.0.3",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.2",
     "prisma": "^5.19.1",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
@@ -48,6 +51,7 @@
     "react-youtube": "^10.1.0",
     "resend": "^4.0.0",
     "slugify": "^1.6.6",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
